# Lumina

./: .env.example  .gitignore  README.md  design.md  hackathon.txt  index.html  package-lock.json  package.json  reference.html  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.claude/skills/analyzing-android-malware-with-apktool/: .skillfish.json
.claude/skills/android-reverse-engineering/: SKILL.md
python-service/: requirements.txt  run_service.py
python-service/app/: __init__.py  config.py  main.py  models.py  pipeline.py  settings.py  store.py
python-service/app/analysis/: adb.py  chat.py  decompile.py  dynamic.py  frida_server.py  genai.py  llm.py  risk.py  static_analysis.py
python-service/scripts/: build-service.ps1  build-service.sh  setup.ps1  setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tools/: README.md
src-tauri/scripts/: fetch-tools.ps1  fetch-tools.sh
src-tauri/src/: adb.rs  commands.rs  lib.rs  main.rs  models.rs  python.rs
src/components/: AppShell.tsx  Onboarding.tsx  ProviderEditor.tsx  primitives.tsx
src/lib/: api.ts  mock.ts  types.ts
src/pages/: Chat.tsx  Dashboard.tsx  Emulation.tsx  Reports.tsx  Settings.tsx  Workspace.tsx
src/store/: useAnalysisStore.ts  useChatStore.ts  useSettingsStore.ts
